--- a/src/SamiverbBundle/Resources/public/directives/alert/notvalidated.html
+++ b/src/SamiverbBundle/Resources/public/directives/alert/notvalidated.html
@@ -10,8 +10,8 @@
     <button class="btn btn-warning" type="button" data-toggle="modal" data-target="#validateModal">
       Request validation
     </button>
-    <button class="btn btn-default" type="button">
-      Learn more
+    <button class="btn btn-default" type="button" disabled>
+      Learn more (soon)
     </button>
   </p>
 </div>
