--- a/src/SamiverbBundle/Resources/public/directives/alert/suggestions.html
+++ b/src/SamiverbBundle/Resources/public/directives/alert/suggestions.html
@@ -2,7 +2,7 @@
   <button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">×</span></button>
   <h4 id="verb-suggestions">
     ´{[{getRequestedVerb()}]}´ Did you mean: 
-    <a href class="suggestions" ng-repeat="match in suggestions.matches" ng-click="requestNewVerb(match)">
+    <a href class="suggestions" ng-repeat="match in suggestions.matches | limitTo:4" ng-click="requestNewVerb(match)">
       <em>{[{match}]}</em>
     </a>
     ?
